2009-03-10 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-dbus-tracker.h: Remove no more used file.

	* src/core/Makefile.am: Updated accordingly.

	* src/core/na-icontextual.c:
	* src/core/na-object-profile.c:
	* src/plugin-tracker/na-tracker-dbus.c:
	* src/utils/nautilus-actions-run.c:
	Remove all references to NATrackedItem obsolete class.

	* src/api/na-ifactory-object-data.h:
	Rename v1 action data group to NA_FACTORY_ACTION_V1_GROUP.

	* src/core/na-object-action-factory.c:
	No more try to read obsolete NAFO_DATA_TARGET_BACKGROUND data.

	* src/plugin-tracker/na-tracker.c
	(menu_provider_get_background_items):
	Implement Nautilus get_background_items() interface.

	* data/nautilus-actions.schemas.in:
	Remove 'target-background' entry description.

	* src/api/na-object-api.h
	(na_object_is_target_background): Removed macro.

	* src/api/na-object-profile.h
	* src/core/na-object-profile.c
	(na_object_profile_is_target_background): Removed function.

2009-03-09 Pierre Wieser <pwieser@trychlos.org>

	* src/io-gconf/nagp-writer.c (nagp_writer_write_data):
	Replace gconf_concat_dir_and_key by g_strdup_printf.

	* src/core/na-ifactory-provider.c (na_ifactory_provider_write_item):
	Add a debug trace when entering in the function.

	* src/api/na-icontext-conditions.h: Renamed as na-icontextual.h.
	* src/core/na-icontext-conditions.c: Renamed as na-icontextual.c.
	* src/core/na-icontext-conditions-factory.c:
	Renamed as na-icontextual-factory.c.

	* po/POTFILES.in:
	* src/api/Makefile.am:
	* src/api/na-icontextual.h:
	* src/api/na-object-api.h:
	* src/core/Makefile.am:
	* src/core/na-icontextual.c:
	* src/core/na-object-action.c:
	* src/core/na-object-profile.c:
	* src/plugin-menu/nautilus-actions.c:
	* src/utils/nautilus-actions-run.c: Updated accordingly.

2009-03-09 Pierre Wieser <pwieser@trychlos.org>

	Refactor NactIBackgroundTab class as NactIFoldersTab.

	* src/nact/nact-ibackground-tab.c: